@@ -1,0 +1,45 @@
+/*
+ * Licensed to the Apache Software Foundation (ASF) under one
+ * or more contributor license agreements.  See the NOTICE file
+ * distributed with this work for additional information
+ * regarding copyright ownership.  The ASF licenses this file
+ * to you under the Apache License, Version 2.0 (the
+ * "License"); you may not use this file except in compliance
+ * with the License.  You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
+package org.apache.cassandra.cql3.validation.operations;
+
+import org.junit.Test;
+
+import org.apache.cassandra.cql3.CQLTester;
+import org.apache.cassandra.exceptions.InvalidRequestException;
+
+public class InsertTest extends CQLTester
+{
+    @Test
+    public void testOverlyLargeInsertPK() throws Throwable
+    {
+        createTable("CREATE TABLE %s (a text, b text, PRIMARY KEY ((a), b))");
+
+        assertInvalidThrow(InvalidRequestException.class,
+                           "INSERT INTO %s (a, b) VALUES (?, 'foo')", new String(TOO_BIG.array()));
+    }
+
+    @Test
+    public void testOverlyLargeInsertCK() throws Throwable
+    {
+        createTable("CREATE TABLE %s (a text, b text, PRIMARY KEY ((a), b))");
+
+        assertInvalidThrow(InvalidRequestException.class,
+                           "INSERT INTO %s (a, b) VALUES ('foo', ?)", new String(TOO_BIG.array()));
+    }
+}
