@@ -1,4 +1,5 @@
 2.1.15
+ * Prevent select statements with clustering key > 64k (CASSANDRA-11882)
  * Fix clock skew corrupting other nodes with paxos (CASSANDRA-11991)
  * Remove distinction between non-existing static columns and existing but null in LWTs (CASSANDRA-9842)
  * Support mlockall on IBM POWER arch (CASSANDRA-11576)
